# RestAPI

./: main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: database.py  main.py
src/conf/: config.py  messages.py
src/database/: database.py  fu_db.py
src/dto/: contact.py  user.py
src/migration/: env.py
src/migration/versions/: 51acb58acf74_init.py  6d07dc2dc366_init.py  d1d41e7a0ed5_add_role_column.py  f0cfbe3d89b2_add_roles.py
src/models/: model.py  user.py
src/postgres-data/: postmaster.pid
src/postgres-data/base/1/: pg_internal.init
src/postgres-data/base/16384/: 1247  1249  1259  1259_fsm  16519  16522  16531  16532  16537  16538  16540  16542  16543  16549  16556  16557  16558  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  (+10 more)
src/postgres-data/base/5/: pg_internal.init
src/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/postgres-data/pg_stat/: pgstat.stat
src/postgres-data/pg_xact/: 0000
src/repository/: contact.py  user.py
src/routers/: auth.py  contact.py  user.py
src/services/: auth.py  email.py  roles.py  user.py
tests/: conftest.py  test_routers_auth.py  test_unit_repository_contact.py
